fix - no more gap in .icon now

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -108,7 +108,6 @@
     background-color: var(--cor-letra);
     padding: 1.5%;
     border-radius: 14%;
-    gap:;
 }
 .hub-header-icon {
     width: auto;
